--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,36 @@
+<h2 style="text-align: center; background-color: pink;border: 2px solid red; margin-top: 1%;">Dynamic input row Add &
+  Delete</h2>
+
+<div class="container" style="margin-top: 5%">
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Action</th>
+        <th>Title 1</th>
+        <th>Title 2</th>
+        <th>Title 3</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let dynamic of dynamicArray; let i = index;">
+        <td (click)="deleteRow(i)">
+          <button type="button" class="btn btn-danger">REMOVE</button>
+        </td>
+        <td>
+          <input [(ngModel)]="dynamicArray[i].title1" class="form-control" type="text" />
+        </td>
+        <td>
+          <input [(ngModel)]="dynamicArray[i].title2" class="form-control" type="text" />
+        </td>
+        <td>
+          <input [(ngModel)]="dynamicArray[i].title3" class="form-control" type="text" />
+        </td>
 
 
-<div class="container" style="margin-top: 5%">    
-  <table class="table table-striped table-bordered">    
-      <thead>    
-          <tr>    
-              <th>Action</th>    
-              <th>Title 1</th>    
-              <th>Title 2</th>    
-              <th>Title 3</th>    
-          </tr>    
-      </thead>    
-      <tbody>    
-           <tr *ngFor="let dynamic of dynamicArray; let i = index;">    
-            <td (click)="deleteRow(i)">    
-              <button type="button" class="btn btn-danger">REMOVE</button>
-            </td>    
-              <td>    
-                <input [(ngModel)]="dynamicArray[i].title1" class="form-control" type="text" />    
-              </td>    
-              <td>    
-                <input [(ngModel)]="dynamicArray[i].title2" class="form-control" type="text" />    
-              </td>    
-              <td>    
-                <input [(ngModel)]="dynamicArray[i].title3" class="form-control" type="text"/>    
-              </td>    
-          
-         
-            <td (click)="addRow(i)">    
-              <button type="button" class="btn btn-success">ADD</button>
-            </td>    
-          </tr>    
-      </tbody>    
-  </table>    
-</div>    
+        <td (click)="addRow(i)">
+          <button type="button" class="btn btn-success">ADD</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
